--- a/Web.UI/Views/Research/FindPersonOptions.cshtml
+++ b/Web.UI/Views/Research/FindPersonOptions.cshtml
@@ -53,7 +53,7 @@
         <hr/>
         <div class="row" >
             <div class="text-center">
-                <a href="#" id="findPersonOptionOkButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-submit24 dialog-buttons"></i> OK</a>
+                <a href="#" id="findPersonOptionSaveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-save24 dialog-buttons"></i> Save</a>
                 <a href="#" id="findPersonOptionCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</a>
             </div>
         </div>
