Changes to the Index and dialog.

--- a/Web.UI/Views/Home/Index.cshtml
+++ b/Web.UI/Views/Home/Index.cshtml
@@ -45,8 +45,8 @@
             <div class="ls-l" style="top:241px;left:80px; line-height: 22px;" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:2500;fadeout:false;scalexout:0.1;scaleyout:0.1;"><i class="fa fa-chevron-circle-right" style="color: #fff; font-size: 24px"></i></div>
             <div class="ls-l" style="top:296px;left:80px; line-height: 22px;" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:3000;fadeout:false;scalexout:0.1;scaleyout:0.1;"><i class="fa fa-chevron-circle-right" style="color: #fff; font-size: 24px"></i></div>
             <div class="ls-l" style="top: 394px; left: 175px; position: absolute;"
-                 data-ls="offsetxin:-50;durationin:2000;delayin:3000;offsetxout:-50;durationout:1000;">
-                <a class="btn-u btn-u-blue btn-u-lg" href="@Url.Action("Research", "Home")"><i class="fa color-light fa-wrench"></i><span style="color: floralwhite;">  Take it for a Spin</span></a>
+                data-ls="offsetxin:-50;durationin:2000;delayin:3000;offsetxout:-50;durationout:1000;">
+                <a class="btn-u btn-u-blue btn-u-lg" href="@Url.Action("SearchAncestry", "Home")"><i class="fa color-light fa-wrench"></i><span style="color: floralwhite;">  Take it for a Spin</span></a>
             </div>
         </div>
         <div class="ls-slide" data-ls="slidedelay:5500;transition2d:21,105;timeshift:-1000;">
