--- a/Web.UI/Views/Research/Hints.cshtml
+++ b/Web.UI/Views/Research/Hints.cshtml
@@ -8,7 +8,7 @@
                         <option value="0">Select</option>
                     </select>
                     <span class="input-group-btn">
-                        <a href="#" id="hintsRetrieveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fmf24-retrieve" style="font-size:22px; margin-top: -0.24em; margin-bottom: -.1em; vertical-align: middle"></i> Retrieve</a>
+                        <button id="hintsRetrieveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fmf24-retrieve" style="font-size:22px; margin-top: -0.24em; margin-bottom: -.1em; vertical-align: middle"></i> Retrieve</button>
                     </span>
                 </div>
             </div>
@@ -28,7 +28,7 @@
                 <div class="input-group">
                     <select class="form-control" id="hintsPersonId"></select>
                     <span class="input-group-btn">
-                            <a href="#" id="hintsFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fmf24-Search" style =" font-size: 22px; vertical-align: middle; margin-top : -0.24em"></i> Find</a>
+                            <button id="hintsFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fmf24-Search" style =" font-size: 22px; vertical-align: middle; margin-top : -0.24em"></i> Find</button>
 	                    </span>
                 </div>
             </div>
