--- a/Web.UI/Content/css/style.css
+++ b/Web.UI/Content/css/style.css
@@ -121,7 +121,7 @@ a.btn-u-lg {
 .purchase {
 	padding: 25px 0 30px;
 	border-bottom: solid 1px #eee;
-	background: url(../img/breadcrumbs.png) repeat;
+	background: url(../images/breadcrumbs.png) repeat;
 }
 .purchase p {
 	margin-bottom: 0;
