--- a/Web.UI/Views/Shared/EmailSubscribe.cshtml
+++ b/Web.UI/Views/Shared/EmailSubscribe.cshtml
@@ -4,7 +4,7 @@
 <form id="subscribeForm" name="subscribeForm" class="footer-subsribe" role="form">
 
     <input id="email" type="email" class="form-control" placeholder="Email Address" required/>
-    <button id="subscribe" class="btn btn-default btn-success btn-u-default" type="submit" value="Subscribe">Subscribe</button>
+    <button id="subscribe" class="btn btn-default btn-success btn-u-default btn-submit" type="submit" value="Subscribe">Subscribe</button>
     
 </form>
 
