--- a/Web.UI/Views/Research/FindPersonOptions.cshtml
+++ b/Web.UI/Views/Research/FindPersonOptions.cshtml
@@ -1,8 +1,7 @@
 ﻿<div class="panel-body">
-    <form class="form-horizontal" role="form">
+    <form class="form-horizontal dialog-options" role="form">
         <div class="form-group">
             <div class="col-sm-12">
-                <label for="findPersonOption1" class="col-sm-4 control-label">Option #1:</label>
                 <div class="input-group">
                     <select class="form-control" id="findPersonOptions1">
                         <option value="0">Select</option>
@@ -12,7 +11,6 @@
         </div>
         <div class="form-group">
             <div class="col-sm-12">
-                <label for="findPersonOption2" class="col-sm-4 control-label">Option #2:</label>
                 <div class="input-group">
                     <select class="form-control" id="findPersonOptions2">
                         <option value="0">Select</option>
@@ -22,7 +20,6 @@
         </div>
         <div class="form-group">
             <div class="col-sm-12">
-                <label for="findPersonOption3" class="col-sm-4 control-label">Option #3:</label>
                 <div class="input-group">
                     <select class="form-control" id="findPersonOptions3">
                         <option value="0">Select</option>
@@ -32,7 +29,6 @@
         </div>
         <div class="form-group">
             <div class="col-sm-12">
-                <label for="findPersonOption4" class="col-sm-4 control-label">Option #4:</label>
                 <div class="input-group">
                     <select class="form-control" id="findPersonOptions4">
                         <option value="0">Select</option>
@@ -42,7 +38,6 @@
         </div>
         <div class="form-group">
             <div class="col-sm-12">
-                <label for="findPersonOption5" class="col-sm-4 control-label">Option #5:</label>
                 <div class="input-group">
                     <select class="form-control" id="findPersonOptions5">
                         <option value="0">Select</option>
@@ -53,8 +48,8 @@
         <hr/>
         <div class="row" >
             <div class="text-center">
-                <a href="#" id="findPersonOptionSaveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-save24 dialog-buttons"></i> Save</a>
-                <a href="#" id="findPersonOptionCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</a>
+                <button id="findPersonOptionSaveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-save24 dialog-buttons"></i> Save</button>
+                <button id="findPersonOptionCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
             </div>
         </div>
     </form>
