--- a/Web.UI/Views/Shared/_Layout.cshtml
+++ b/Web.UI/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                             <span class="sr-only">Toggle navigation</span>
                             <span class="fa fa-bars"></span>
                         </button>
-                        <a class="navbar-brand" href="@Url.Action("Index", "Home")"><img src="@Url.Content("~/Images/findmyfamiliestop.png")" /></a>
+                        <a class="navbar-brand" href="@Url.Action("Index", "Home")"><i class="fa fmf-findmyfamiliestop"></i></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -162,7 +162,7 @@
                     </div>
                     <div class="col-md-6">
                         <a href="index.html">
-                            <img class="lazy pull-right" data-original="/Images/findmyfamiliesbottom.png" width="252" height="39">
+                            <i class="lazy pull-right fa fmf-findmyfamiliesbottom"></i>
                         </a>
                     </div>
                 </div>
