--- a/Web.UI/Views/Research/FindPerson.cshtml
+++ b/Web.UI/Views/Research/FindPerson.cshtml
@@ -55,10 +55,10 @@
                 </div>
                 <div class="twoButtons">
                     <button name="findButton" type="submit" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-execute24 dialog-buttons"></i> Find</button>
-                    <button id="optionsButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-options24 dialog-buttons"></i> Options</button>
+                    <button type='button' id="optionsButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-options24 dialog-buttons"></i> Options</button>
                     <button id="previousButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-previous24 dialog-buttons"></i> Previous</button>
-                    <button id="clearButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-clean24 dialog-buttons"></i> Clear</button>
-                    <button id="findPersonCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
+                    <button type='button' id="clearButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-clean24 dialog-buttons"></i> Clear</button>
+                    <button type='button' id="findPersonCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
                 </div>
             </form>
         </div>
@@ -90,6 +90,13 @@
         </thead>
     </table>
     <br/>
+</div>
+<div id="findPersonButtons" class="row" style="display: none">
+    <br/>
+    <div class="text-center">
+        <button id="findPersonSelectButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-ok24 dialog-buttons"></i> Select</button>
+        <button id="findPersonCancelButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Cancel</button>
+    </div>
 </div>
 <div id="findPersonSpinner" />
 
