--- a/Web.UI/Views/Research/StartingPointReport.cshtml
+++ b/Web.UI/Views/Research/StartingPointReport.cshtml
@@ -1,7 +1,5 @@
-﻿<link rel="stylesheet" href="~/Views/Home/Research/bootstrap-table.min.css">
-
-<div>
-    <table id="startingPointTable"
+﻿<div>
+    <table id="startingPointReportTable"
            data-toggle="table"
            data-height="600"
            data-pageSize="50"
@@ -22,19 +20,16 @@
         </thead>
     </table>
 </div>
-<div id="startingPointReportSpinner" style="position: fixed; top: 50%; left: 50%"></div>
+<div class="row">
+    <div class="text-center">
+        <button id="startingPointReportSaveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-save24 dialog-buttons"></i> Save</button>
+        <button id="startingPointReportOptionsButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-options24 dialog-buttons"></i> Options</button>
+        <button id="startingPointReportHelpButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Help</button>
+        <button id="startingPointReportCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
+    </div>
+</div>
 
-<script type="text/javascript" src="~/Views/Home/Research/bootstrap-table.min.js"></script>
+<div id="startingPointReportSpinner"/>
 
-<script type="text/javascript">
-    $(function () {
-        var scriptTag = document.createElement("script");
-        scriptTag.src = "/Views/Home/Research/StartingPoint/StartingPointReport.js";
-        document.head.appendChild(scriptTag);
-    });
-</script>
-
-@*<script type="text/javascript" src="~/Views/Home/Research/StartingPoint/StartingPointReport.js"></script>*@
-
-
-
+<script type="text/javascript" src="~/Content/js/vendor/bootstrap-table.min.js"></script>
+<script type="text/javascript">require(['main'], function (main) { require(['startingPointReportController']); });</script>
