--- a/Web.UI/Views/Research/Retrieve.cshtml
+++ b/Web.UI/Views/Research/Retrieve.cshtml
@@ -2,7 +2,7 @@
     <form class="form-horizontal" role="form">
         <div class="form-group">
             <label for="retrieveResearchType" class="col-sm-2 control-label">Research:</label>
-            <div class="col-sm-10">
+            <div class="col-sm-3">
                 <select class="form-control researchType" id="retrieveResearchType">
                     <option>Ancestors</option>
                     <option>Descendants</option>
@@ -13,10 +13,10 @@
             <label for="retrievePersonId" class="col-sm-2 control-label">Name:</label>
             <div class="col-sm-7">
                 <div class="input-group">
-                    <input id="retrievePersonId" type="text" class="form-control" disabled>
+                    <select class="form-control" id="retrievePersonId"></select>
                     <span class="input-group-btn">
-                            <a href="#" id="retrieveFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fmf24-Search" style =" font-size: 22px; vertical-align: middle; margin-top : -0.24em"></i> Find</a>
-	                    </span>
+                        <button id="retrieveFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-search24 dialog-buttons btn-retrieve-find"></i> Find</button>
+                    </span>
                 </div>
             </div>
         </div>
@@ -35,6 +35,16 @@
                 <input type="text" class="form-control selectName" id="retrieveTitle" placeholder="Enter description of data to be retrieved">
             </div>
         </div>
+        <hr/>
+        <div class="row" >
+            <div class="text-center">
+                <button id="retrieveSubmitButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-submit24 dialog-buttons"></i> Submit</button>
+                <button id="retrievePreviousButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-previous24 dialog-buttons"></i> Previous</button>
+                <button id="retrieveResetButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-reset24 dialog-buttons"></i> Reset</button>
+                <button id="retrieveHelpButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Help</button>
+                <button id="retrieveCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
+            </div>
+        </div>        
     </form>
 </div>
 <div id="retrieveSpinner"/>
