--- a/Web.UI/Views/Research/StartingPointReport.cshtml
+++ b/Web.UI/Views/Research/StartingPointReport.cshtml
@@ -1,35 +1,38 @@
 ﻿<div>
     <table id="startingPointReportTable"
            data-toggle="table"
-           data-height="600"
-           data-pageSize="50"
-           data-pageList="[10, 25, 50, 100, 200]"
+           data-height="800"
+           data-pagesize="50"
+           data-pagelist="[10, 25, 50, 100, 200]"
            data-pagination="true"
-           data-search="true"
+           data-search="false"
            data-show-refresh="false"
-           data-show-toggle="true"
-           data-show-columns="true"
+           data-show-toggle="false"
+           data-show-columns="false"
            data-toolbar="#toolbar"
            data-click-to-select="false"
            data-single-select="false">
         <thead>
-        <tr>
-            <th data-field="Name" data-formatter="nameFormatter">Name</th>
-            <th data-field="Reasons" data-formatter="reasonsFormatter">Reasons</th>
-        </tr>
+            <tr>
+                <th data-field="Name" data-formatter="nameFormatter" data-events="nameEvents">Name</th>
+                <th data-field="Reasons" data-formatter="reasonsFormatter">Reasons</th>
+            </tr>
         </thead>
     </table>
-</div>
-<div class="row">
-    <div class="text-center">
-        <button id="startingPointReportSaveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-save24 dialog-buttons"></i> Save</button>
-        <button id="startingPointReportOptionsButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-options24 dialog-buttons"></i> Options</button>
-        <button id="startingPointReportHelpButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Help</button>
-        <button id="startingPointReportCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
-    </div>
+    <br />
 </div>
 
-<div id="startingPointReportSpinner"/>
+<div class="row">
+<div class="text-center">
+    <button id="startingPointReportSaveButton" class ="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class ="fa fmf-save24 dialog-buttons"></i> Save </button>
+    <button id="startingPointReportOptionsButton" class ="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class ="fa fmf-options24 dialog-buttons"></i> Options </button>
+    <button id="startingPointReportHelpButton" class ="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class ="fa fmf-help24 dialog-buttons"></i> Help </button>
+    <button id="startingPointReportCloseButton" class ="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class ="fa fmf-close24 dialog-buttons"></i> Close </button>
+</div>
+</div>
+
+
+<div id="startingPointReportSpinner" />
 
 <script type="text/javascript" src="~/Content/js/vendor/bootstrap-table.min.js"></script>
 <script type="text/javascript">require(['main'], function (main) { require(['startingPointReportController']); });</script>
