changes to the way checkboxes appear to improve dialog

--- a/Web.UI/Content/css/dialog.css
+++ b/Web.UI/Content/css/dialog.css
@@ -265,8 +265,12 @@ hr {
     height: 34px;
     width: 213.5px;
 }
-#checkBoxes {
+.checkBoxes {
    height: 40px !important;
+}
+
+.checkbox-bottom {
+    margin-bottom: -.8em;
 }
 
 /*Change the HTML*/
