--- a/Web.UI/Views/Research/PossibleDuplicates.cshtml
+++ b/Web.UI/Views/Research/PossibleDuplicates.cshtml
@@ -45,7 +45,7 @@
         <div class="form-group">
             <label for="includePossibleDuplicates" class="col-sm-2 control-label">&nbsp;</label>
             <div class="col-sm-10">
-                <div id="checkBoxes">
+                <div class="checkBoxes">
                           <input id="includePossibleDuplicates" type="checkbox" /><label for="includePossibleDuplicates" style="margin-bottom: 0px;">&nbsp;<span style="font-weight: normal">Possible Duplicates</span></label>&nbsp;&nbsp;<br />
                           <input id="includePossibleMatches" type="checkbox" /><label for="includePossibleMatches" style="margin-bottom: 0px;">&nbsp;<span style="font-weight: normal">Possible Matches</span></label>&nbsp;&nbsp;
                 </div>
