--- a/Web.UI/Views/Research/StartingPoint.cshtml
+++ b/Web.UI/Views/Research/StartingPoint.cshtml
@@ -51,13 +51,13 @@
                 </div>
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group checkbox-bottom">
             <label for="startingPointIncompleteOrdinances" class="col-sm-2 control-label">&nbsp;</label>
             <div class="col-sm-10">
                 <div class="input-group">
-                    <input id="startingPointOrdinances" type="checkbox"/><label for="startingPointOrdinances">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">IncompleteOrdinances</span></label>&nbsp;&nbsp;
-                    <input id="startingPointHints" type="checkbox"/><label for="startingPointHints">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Hints</span></label>&nbsp;&nbsp;
-                    <input id="startingPointDuplicates" type="checkbox"/><label for="startingPointDuplicates">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Possible Duplicates</span></label>&nbsp;&nbsp;
+                    <input id="startingPointOrdinances" type="checkbox" /><label for="startingPointOrdinances">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Incomplete Ordinances</span></label>&nbsp;&nbsp;
+                    <input id="startingPointHints" type="checkbox" /><label for="startingPointHints">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Hints</span></label>&nbsp;&nbsp;
+                    <input id="startingPointDuplicates" type="checkbox" /><label for="startingPointDuplicates">&nbsp;<span style="font-weight: normal; color: rgb(255,0,0)">Possible Duplicates</span></label>&nbsp;&nbsp;
                 </div>
             </div>
         </div>
