More changes and fixes to starting point, findperson, and retrieve

--- a/Web.UI/Views/Research/FindPerson.cshtml
+++ b/Web.UI/Views/Research/FindPerson.cshtml
@@ -58,7 +58,7 @@
                     <button type='button' id="optionsButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-options24 dialog-buttons"></i> Options</button>
                     <button id="previousButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-previous24 dialog-buttons"></i> Previous</button>
                     <button type='button' id="clearButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-clean24 dialog-buttons"></i> Clear</button>
-                    <button id="helpButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Help</button>
+                    <button type='button' id="helpButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Help</button>
                     <button type='button' id="findPersonCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
                 </div>
             </form>
@@ -67,7 +67,7 @@
 </div>
 
 
-<div style="height : 368px; margin-top: -7px;">
+<div>
     <table id="eventsTable"
            data-toggle="table"
            data-height="275"
@@ -90,10 +90,9 @@
         @*            data-visible="false"*@
         </thead>
     </table>
-    <br/>
 </div>
 <div id="findPersonButtons" class="row" style="display: none">
-    <br/>
+    <br />
     <div class="text-center">
         <button id="findPersonSelectButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-ok24 dialog-buttons"></i> Select</button>
         <button id="findPersonCancelButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Cancel</button>
