--- a/Web.UI/Views/Research/StartingPointReport.cshtml
+++ b/Web.UI/Views/Research/StartingPointReport.cshtml
@@ -25,9 +25,9 @@
 <div class="row">
 <div class="text-center">
     <button id="startingPointReportSaveButton" class ="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class ="fa fmf-save24 dialog-buttons"></i> Save </button>
-    <button id="startingPointReportOptionsButton" class ="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class ="fa fmf-options24 dialog-buttons"></i> Options </button>
-    <button id="startingPointReportHelpButton" class ="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class ="fa fmf-help24 dialog-buttons"></i> Help </button>
-    <button id="startingPointReportCloseButton" class ="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class ="fa fmf-close24 dialog-buttons"></i> Close </button>
+    <button type='button' id="startingPointReportOptionsButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-options24 dialog-buttons"></i> Options </button>
+    <button type='button' id="startingPointReportHelpButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Help </button>
+    <button type='button' id="startingPointReportCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close </button>
 </div>
 </div>
 
