--- a/Web.UI/Content/css/style.css
+++ b/Web.UI/Content/css/style.css
@@ -120,7 +120,7 @@ a.btn-u-lg {
   box-shadow: 0 0 5px #ccc;
   margin-left: auto !important;
   margin-right: auto !important;
-  background: url(../img/patterns/15.png) repeat;
+  background: url(../images/15.png) repeat;
 }
 
 /*Main Styles
