--- a/Web.UI/Views/Research/FindPerson.cshtml
+++ b/Web.UI/Views/Research/FindPerson.cshtml
@@ -91,8 +91,7 @@
         </thead>
     </table>
 </div>
-<div id="findPersonButtons" class="row" style="display: none">
-    <br />
+<div id="findPersonButtons" class="row" style="display: none; margin-top: .8em;">
     <div class="text-center">
         <button id="findPersonSelectButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-ok24 dialog-buttons"></i> Select</button>
         <button id="findPersonCancelButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Cancel</button>
