--- a/Web.UI/Views/Research/IncompleteOrdinances.cshtml
+++ b/Web.UI/Views/Research/IncompleteOrdinances.cshtml
@@ -1,57 +1,62 @@
-<div class="panel-body">                                                      
+<div class="panel-body">
     <form class="form-horizontal" role="form">
         <div class="form-group">
-            <label for="ordinancesReportId" class="col-sm-2 control-label">Retrieved:</label>
+            <label for="incompleteOrdinancesReportId" class="col-sm-2 control-label">Retrieved:</label>
             <div class="col-sm-10">
                 <div class="input-group">
-                    <select class="form-control" id="ordinancesReportId">
+                    <select class="form-control" id="incompleteOrdinancesReportId">
                         <option value="0">Select</option>
                     </select>
                     <span class="input-group-btn">
-                        <button id="ordinancesRetrieveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fmf24-retrieve" style="font-size:22px; margin-top: -0.24em; margin-bottom: -.1em; vertical-align: middle"></i> Retrieve</button>
+                        <button id="incompleteOrdinancesRetrieveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-retrieve24 dialog-buttons btn-retrieve-find"></i> Retrieve</button>
                     </span>
                 </div>
             </div>
         </div>
         <div class="form-group">
-            <label for="ordinancesResearchType" class="col-sm-2 control-label">Research:</label>
-            <div class="col-sm-10">
-                <select class="form-control researchType" id="ordinancesResearchType">
+            <label for="incompleteOrdinancesResearchType" class="col-sm-2 control-label">Research:</label>
+            <div class="col-sm-3">
+                <select class="form-control researchType" id="incompleteOrdinancesResearchType">
                     <option>Ancestors</option>
                     <option>Descendants</option>
                 </select>
             </div>
         </div>
         <div class="form-group">
-            <label for="ordinancesPersonId" class="col-sm-2 control-label">Name:</label>
+            <label for="incompleteOrdinancesPersonId" class="col-sm-2 control-label">Name:</label>
             <div class="col-sm-7">
                 <div class="input-group">
-                    <input id="ordinancesPersonId" type="text" class="form-control" disabled>
+                    <select class="form-control" id="incompleteOrdinancesPersonId"></select>
                     <span class="input-group-btn">
-                            <button id="ordinancesFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fmf24-Search" style =" font-size: 22px; vertical-align: middle; margin-top : -0.225em"></i> Find</button>
-	                    </span>
+                        <button id="incompleteOrdinancesFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-search24 dialog-buttons btn-retrieve-find"></i> Find</button>
+                    </span>
                 </div>
             </div>
         </div>
         <div class="form-group">
-            <label for="ordinancesGeneration" class="col-sm-2 control-label">Generations:</label>
+            <label for="incompleteOrdinancesGeneration" class="col-sm-2 control-label">Generations:</label>
             <div class="col-sm-4">
                 <div class="input-group">
-                    <div id="ordinancesGenerationDiv"></div>
+                    <div id="incompleteOrdinancesGenerationDiv"></div>
                 </div>
+            </div>
+        </div>
+        <hr/>
+        <div class="row" >
+            <div class="text-center">
+                <button id="incompleteOrdinancesSubmitButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-submit24 dialog-buttons"></i> Incomplete Ordinances</button>
+                <button type='button' id="incompleteOrdinancesPreviousButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-previous24 dialog-buttons"></i> Previous</button>
+                <button type='button' id="incompleteOrdinancesResetButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-reset24 dialog-buttons"></i> Reset</button>
+                <button type='button' id="incompleteOrdinancesHelpButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Help</button>
+                <button type='button' id="incompleteOrdinancesCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
             </div>
         </div>
     </form>
 </div>
-<div id="ordinancesSpinner" style="position: fixed; top: 50%; left: 50%"></div>
+<div id="retrieveSpinner"/>
 
-<script type="text/javascript">
-    $(function () {
-        var scriptTag = document.createElement("script");
-        scriptTag.src = "/Views/Home/Research/IncompleteOrdinances/IncompleteOrdinances.js";
-        document.head.appendChild(scriptTag);
-    });
-</script>
+<script type="text/javascript">require(['main'], function (main) { require(['incompleteOrdinancesController']); });</script>
 
 
-@*<script type="text/javascript" src="~/Views/Home/Research/IncompleteOrdinances/IncompleteOrdinances.js"></script>*@
+
+
